--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-AnyThinkiOS/AnyThinkSDK.framework/AnyThinkSDK filter=lfs diff=lfs merge=lfs -text
+AnyThinkiOS/AnyThinkiOS/AnyThinkSDK.framework/AnyThinkSDK filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
